# procrastination-terminator

./: .env.example  .gitignore  CLAUDE.md  README.md  init.md  pyproject.toml
.claude/: CLAUDE.md
docs/: SPEC.md  deploy-oracle.md
src/procrastination_terminator/: __init__.py  __main__.py  backoff.py  bot.py  config.py  daytime.py  llm.py  models.py  monitor.py  notion_init.py  plan_parser.py  store.py  tone.py
src/procrastination_terminator/storage/: __init__.py  base.py  file_backend.py  notion_backend.py
templates/: .pre-commit-config-template.yaml  prompt-template.txt  pyproject-template.toml
tests/: test_backend_selection.py  test_backoff.py  test_bot.py  test_config.py  test_daytime.py  test_file_backend.py  test_llm.py  test_monitor.py  test_notion_backend.py  test_notion_init.py  test_plan_parser.py  test_render.py  test_store.py  test_tone.py
