[project]
name = "procrastination-terminator"
version = "0.1.0"
description = "A Discord bot that nags a single student through their daily study plan."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tzdata>=2026.2",
]

[project.scripts]
procrastination-terminator = "procrastination_terminator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procrastination_terminator"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
]

# ---- Ruff (lint + format; replaces black / flake8 / isort) ----
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length is the formatter's job

# ---- mypy ----
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

# ---- pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
